kubernetes/solr-config.yaml
apiVersion: v1
kind: Pod
metadata:
  name: solr-config
  labels:
    stack: esgf-solr-cloud
    component: solr
    
spec:

  restartPolicy: OnFailure

  # init container downloads source code distribution to shared volume
  containers:
    - name: solr-config
      image: solr:7.4
      command:
        - /src/esgf-solr-cloud/scripts/solr_config.sh
      volumeMounts:
        - name: src
          mountPath: /src
    
  volumes:
    - name: src
      emptyDir: {}
