kubernetes/esgf-search2.yaml
# ESGF Search service to expose functionality to esgf-bastion
apiVersion: v1
kind: Service
metadata:
  name: esgf-search-nodeport
  labels:
    stack: esgf-solr-cloud
    component: esgf-search
spec:
  type: NodePort
  ports:
  - name: tomcat-port
    nodePort: 31000
    port: 8080
    targetPort: 8080
  selector:
    stack: esgf-solr-cloud
    component: esgf-search
