kubernetes/solr-node-single-node.yaml
apiVersion: v1
kind: Service
metadata:
  name: solr-node-1
  labels:
    stack: esgf-solr-cloud
    component: solr
    solr-node: node-1
spec:
  type: ClusterIP
  ports:
    - name: solr
      port: 8983
  selector:
    stack: esgf-solr-cloud
    component: solr
    solr-node: node-1
        
---

apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: solr-node-1
  labels:
    stack: esgf-solr-cloud
    component: solr
    solr-node: node-1
spec:
  selector:
    matchLabels:
      stack: esgf-solr-cloud
      component: solr
      solr-node: node-1
  replicas: 1
  template:
    metadata:
      labels:
        stack: esgf-solr-cloud
        component: solr
        solr-node: node-1
    spec:
      containers:
        - name: solr-node-1
          image: esgfhublc/solr-cloud
          args: ["solr-foreground", "-c", "-p", "8983", "-z", "zookeeper:2181", "-s", "/data/solr-home"]
          ports:
            - name: solr
              containerPort: 8983
          #readinessProbe:
          #  httpGet: &probe
          #    path: /solr/admin/info/system?wt=json
          #    port: 8983
          #  initialDelaySeconds: 10
          #  periodSeconds: 10
          #livenessProbe:
          #  httpGet: *probe
          #  initialDelaySeconds: 60
          #  periodSeconds: 10
          volumeMounts:
            - name: solr-home
              mountPath: /data/solr-home
      volumes:
        - name: solr-home
          emptyDir: {}
