kubernetes/zookeeper.yaml
# Service that makes Zookeeper reachable by Solr pods in the cluster
apiVersion: v1
kind: Service
metadata:
  name: zookeeper
  labels:
    stack: esgf-solr-cloud
    component: zookeeper
spec:
  ports:
  - name: zk-client-port
    port: 2181
  - name: zk-server-port
    port: 2888
  - name: zk-elect-port
    port: 3888
  selector:
    stack: esgf-solr-cloud
    component: zookeeper
    
---

# Zookeeper managed pod
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: zookeeper
  labels:
    stack: esgf-solr-cloud
    component: zookeeper
spec:
  selector:
    matchLabels:
      stack: esgf-solr-cloud
      component: zookeeper
  replicas: 1
  template:
    metadata:
      labels:
        stack: esgf-solr-cloud
        component: zookeeper
    spec:
      containers:
        - name: zookeeper
          image: zookeeper:3.4
          ports:
            - name: zk-client-port
              containerPort: 2181
            - name: zk-server-port
              containerPort: 2888
            - name: zk-elect-port
              containerPort: 3888
          volumeMounts:
            - name: zk-data
              mountPath: /data
            - name: zk-datalog
              mountPath: /datalog
      volumes:
        - name: zk-data
          persistentVolumeClaim:
            claimName: zk-data
        - name: zk-datalog
          persistentVolumeClaim:
            claimName: zk-datalog
