kubernetes/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    ingress.kubernetes.io/rewrite-target: /
    ingress.kubernetes.io/ssl-passthrough: "true"
    ingress.kubernetes.io/report-node-internal-ip-address: "true"
  name: esgf-solr-cloud-ingress
  labels:
    stack: esgf-solr-cloud
    component: proxy
spec:
  rules:
  - host: esgf.192.168.64.79.xip.io
    http:
      paths:
      - path: /solr
        backend:
          serviceName: solr-node-1
          servicePort: 8983
